clusters/dev/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
        - name: api
          image: sample-api-image:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: 250m
#              memory: 1Gi
            limits:
              cpu: 400m
#              memory: 2Gi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: push
spec:
  replicas: 1
  selector:
    matchLabels:
      app: push
  template:
    metadata:
      labels:
        app: push
    spec:
      containers:
        - name: push
          image: sample-push-image:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: 250m
            #              memory: 1Gi
            limits:
              cpu: 400m
#              memory: 2Gi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: batch
spec:
  replicas: 1
  selector:
    matchLabels:
      app: batch
  template:
    metadata:
      labels:
        app: batch
    spec:
      containers:
        - name: batch
          image: sample-batch-image:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: 250m
            #              memory: 1Gi
            limits:
              cpu: 400m
#              memory: 2Gi
