clusters/dev/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: "/"
spec:
  selector:
    app: api
  type: NodePort
  ports:
    - port: 8001
      targetPort: 3000
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: push
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: "/"
spec:
  selector:
    app: push
  type: NodePort
  ports:
    - port: 8002
      targetPort: 3000
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: batch
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: "/"
spec:
  selector:
    app: batch
  type: NodePort
  ports:
    - port: 8003
      targetPort: 3000
      protocol: TCP
