clusters/dev/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-northeast-2:$ACCOUNT_ID:certificate/uuid
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
#    external-dns.alpha.kubernetes.io/hostname: dev-api.mydomain.kr
spec:
  rules:
    - host: '*.mydomain.kr'
      http:
        paths:
          - path: /*
            pathType: ImplementationSpecific
            backend:
              service:
                name: ssl-redirect
                port:
                  name: use-annotation
    - host: api.mydomain.kr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api
                port:
                  number: 8001
    - host: push.mydomain.kr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: push
                port:
                  number: 8002
    - host: batch.mydomain.kr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: batch
                port:
                  number: 8003
